[package]
name = "main"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Yde Madsen madsen3008@gmail.com"]
description = "A implementation of a Ray tracing library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seba2390"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vector_lib = { path = "lib/vector_lib" }
math_lib = { path = "lib/math_lib" }
num-traits = "0.2"
rand = "0.8.4"
indicatif = "0.17.3"

[[bin]]
name = "main"
path = "src/main.rs"