[package]
name = "main"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Yde Madsen madsen3008@gmail.com"]
description = "A implementation of a Ray tracing library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seba2390"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Official libs
num-traits = "0.2"
rand = "0.8.4"
indicatif = "0.17.3"
# My libs
vector_lib = { path = "lib/vector_lib" }
ray_lib = { path = "lib/ray_lib" }
color_lib = { path = "lib/color_lib" }
sphere_lib = { path = "lib/sphere_lib" }
scene_lib = { path = "lib/scene_lib" }
camera_lib = { path = "lib/camera_lib" }
utilities_lib = { path = "lib/utilities_lib" }

[[bin]]
name = "main"
path = "src/main.rs"