[package]
name = "camera_lib"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Yde Madsen madsen3008@gmail.com"]
description = "An implementation a camera struct"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seba2390"

[lib]
name = "camera_lib"
path = "lib/Camera.rs"

[dependencies]
num-traits = "0.2"
rand = "0.8.4"
vector_lib = { path = "../vector_lib" }
ray_lib = { path = "../ray_lib" }
