[package]
name = "math_lib"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Yde Madsen madsen3008@gmail.com"]
description = "An implementation of math things"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seba2390"

[lib]
name = "math_lib"
path = "lib/Math.rs"

[dependencies]
num-traits = "0.2"