[package]
name = "vector_lib"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Yde Madsen madsen3008@gmail.com"]
description = "An implementation 3D vector struct"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seba2390"

[lib]
name = "vector_lib"
path = "lib/Vector.rs"

[dependencies]
num-traits = "0.2"
rand = "0.8.4"
fastrand = "1.9.0"
